# tootodo-desktop

./: .gitignore  components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts.timestamp-1719516461590-ae4ebc2b564f7.mjs
scripts/: generate-types.js
src/: app.pcss  hooks.server.ts  hooks.ts
src-tauri/: Cargo.toml  build.rs  note_model.pb.cc  note_model.pb.h  tauri.conf.json
src-tauri/oqldockey/: Cargo.toml
src-tauri/proto/: chat.proto  chat_model.proto  habit.proto  memo.proto  note.proto  note_model.proto  prompt.proto  r-weekly-habit.proto  r-weekly-task.proto  task.proto  task_model.proto  weekly.proto
src-tauri/src/: error.rs  main.rs  store.rs  utils.rs
src-tauri/src/model/: chat.rs  habit.rs  memo.rs  mod.rs  note.rs  task.rs
src-tauri/src/proto_generated/: habit.rs  memo.rs  note.rs  task.rs  weekly.rs
src/lib/: api.js  api_ai.js  icons.ts  schema.ts  tailwindColors.js  type.ts  utils.ts
src/lib/components/: HeaderNav.svelte  Memo.svelte  PageTemplete.svelte  PomoIcon.svelte  RangeMonthCalendar.svelte  SelectCategory.svelte  TipTapEditor.svelte  TwoOptTab.svelte
src/lib/handler/: tasks.svelte.ts
src/lib/schema/: chat.ts  habit.ts  index.ts  memo.ts  task.ts  weekly.ts
src/lib/store/: auth.ts  index.js  timerStore.ts  useLocStorage.js
src/lib/worker/: timer.worker.js  timer.worker.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.js  +page.svelte  +page.ts
src/routes/do/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
(+376 files in other folders)
