# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["seungyeah"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["oqldockey"]

[build-dependencies]
prost-build = "0.12.3"
tauri-build = { version = "2.0.0", features = [] }
prost-wkt-build = "0.5.0"

[dependencies]
tauri = { version = "2.0", features = [] }
prost = "0.12.3"
rocksdb = "0.22.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.65"
uuid = { version = "1.11.0", features = ["v7"] }
chrono = "0.4.31"
prost-types = "0.12.3"
specta = "=2.0.0-rc.22"
prost-wkt-types = "0.5.0"
prost-wkt = "0.4.2"
tauri-api = "0.7.6"
inventory = "0.2.3"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
